gitops/apps/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/controller: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mealie.apocalypso.xyz
      secretName: mealie-tls
  rules:
    - host: mealie.apocalypso.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 80
